# omicstrust

./: .dockerignore  .gitignore  ASSUMPTIONS.md  BENCHMARK_PROTOCOL.md  BUILD_WEEK_DELTA.md  CONTRIBUTING.md  FAILURE_MODES.md  JUDGE_GUIDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v0.1.md  REPRODUCIBILITY_PROTOCOL.md  SCIENTIFIC_SCOPE.md  pyproject.toml  requirements.txt
.bootstrap/: part-aa  part-ab  part-ac  part-ad  part-ae  part-af  part-ag  part-ah  part-ai  part-aj  part-ak  part-al
buyer_demo/: DEMO_SCRIPT_2_MINUTES.md  README.md  SUBMISSION_COPY.md  api_examples.http  architecture.md  claim_boundaries.md  demo_commands.sh  private_deployment_security.md
configs/: default.yaml  full_audit.yaml  hpap_t1d_beta_fast_audit.yaml  hpap_t1d_beta_pseudobulk_audit.yaml  norman_perturbseq_audit.yaml  reproducibility.yaml  scib_pancreas_stress.yaml  seaad_microglia_fast_audit.yaml  seaad_microglia_final_audit.yaml  singlecell_audit.yaml  synthetic_benchmark.yaml  worth_publication_grade.yaml  worth_residualized_embedding.yaml
deploy/: .dockerignore  Dockerfile  PRIVATE_DEPLOYMENT.md  docker-compose.yml
docs/: COPILOT.md
examples/: auto_prepare_public_omics_audit.py  generate_synthetic_h5ad.py  no_safe_biomarker_certificate.py  prepare_covid19_celltype_subsets.py  prepare_covid19_pbmc_compact_audit.py  run_singlecell_audit.py
omicstrust/: __init__.py  audit.py  dataset.py  trust.py
scripts/: fetch_vanish_emtab7581.py  generate_report.py  make_steroid_safety_gate_evidence_pack.py  prepare_vanish_steroid_safety_gate.py  run_audit.py  run_benchmark.py  (+6 more)
(+184 files in other folders)
