[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicstrust"
version = "0.1.0"
description = "Scientific data observability and trust audits for omics workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OmicsTrust Contributors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "statsmodels>=0.14",
  "anndata>=0.9",
  "pyyaml>=6",
  "typer>=0.9",
  "rich>=13",
  "jinja2>=3",
  "matplotlib>=3.7",
  "joblib>=1.2",
  "psutil>=5.9",
  "defusedxml>=0.7.1"
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]
api = ["fastapi>=0.100", "uvicorn>=0.23", "python-multipart>=0.0.9", "httpx>=0.27"]
ai = ["openai>=1.66"]
reports = ["reportlab>=4"]
optional = ["scanpy>=1.9", "plotly>=5", "mlflow>=2"]

[project.scripts]
omicstrust = "omicstrust.cli.main:app"

[tool.setuptools.packages.find]
include = ["omicstrust", "omicstrust.*"]
exclude = ["omicstrust_security*"]

[tool.setuptools.package-data]
omicstrust = ["resources/**/*.json", "resources/**/*.md", "resources/**/*.pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
